--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1>Rock, Paper, Scissors</h1>
         <div class="choices">
-            <button id="rock"><img src="img/rock1.png" alt=""></button>
-            <button id="paper"><img src="img/paper.png" alt=""></button>
-            <button id="scissors"><img src="img/scissor.png" alt=""></button>
+            <button id="rock"><img src="rock1.png" alt=""></button>
+            <button id="paper"><img src="paper.png" alt=""></button>
+            <button id="scissors"><img src="scissor.png" alt=""></button>
         </div>
         <div id="result">
             <p>Choose your move!</p>
